# qndx

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  plan.md
.github/workflows/: benchmarks.yml  release.yml
benchmarks/: budgets.toml  corpora.toml  fetch_corpora.sh  run_standard_benches.sh
benchmarks/patterns/: kubernetes.txt  linux.txt  rust.txt
crates/qndx-bench/: Cargo.toml
crates/qndx-bench/benches/: end_to_end_search.rs  git_overlay.rs  hash_choice.rs  ngram_extract.rs  postings_choice.rs  query_planner.rs  real_corpus.rs  serializer_choice.rs
crates/qndx-bench/src/: fixtures.rs  lib.rs  report.rs
crates/qndx-cli/: Cargo.toml
crates/qndx-cli/src/: main.rs
crates/qndx-core/: Cargo.toml
crates/qndx-core/src/: format.rs  hash.rs  lib.rs  scan.rs  types.rs  walk.rs
crates/qndx-core/tests/: differential.rs  regex_edge_cases.rs
crates/qndx-git/: Cargo.toml
crates/qndx-git/src/: lib.rs
crates/qndx-index/: Cargo.toml
crates/qndx-index/src/: builder.rs  lib.rs  ngram.rs  overlay.rs  postings.rs  reader.rs
crates/qndx-index/tests/: property_tests.rs
crates/qndx-query/: Cargo.toml
crates/qndx-query/src/: decompose.rs  lib.rs  planner.rs  search.rs  verify.rs
crates/qndx-query/tests/: freshness_e2e.rs
docs/: architecture.md  decision-gates.md  file-format.md  performance-budgets.md  regression-triage.md  release-gate.md
