[workspace]
resolver = "2"
members = [
    "crates/qndx-cli",
    "crates/qndx-core",
    "crates/qndx-index",
    "crates/qndx-query",
    "crates/qndx-git",
    "crates/qndx-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Internal crates
qndx-core = { path = "crates/qndx-core" }
qndx-index = { path = "crates/qndx-index" }
qndx-query = { path = "crates/qndx-query" }
qndx-git = { path = "crates/qndx-git" }
qndx-bench = { path = "crates/qndx-bench" }

# Benchmark framework
criterion = { version = "0.8", features = ["html_reports"] }

# Serialization candidates (for decision gate A)
postcard = { version = "1", features = ["alloc"] }
wincode = { version = "0.5", features = ["derive", "alloc"] }
serde = { version = "1", features = ["derive"] }

# Bit-set / compressed postings (for decision gate B)
roaring = "0.11"

# Git integration
gix = { version = "0.80", default-features = false, features = ["basic", "worktree-mutation"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Regex
regex = "1"
regex-syntax = "0.8"

# File discovery (gitignore-aware walking)
ignore = "0.4"

# Memory-mapped I/O
memmap2 = "0.9"

# Hashing
crc32fast = "1"

# Random (deterministic fixtures)
rand = { version = "0.10", features = ["chacha"] }

# Reporting
serde_json = "1"

# Testing
tempfile = "3"
proptest = "1"
