[package]
name = "qndx-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI entrypoints for qndx (index/search/bench/report)"

[[bin]]
name = "qndx"
path = "src/main.rs"

[features]
default = []
bench-tools = ["dep:serde", "dep:toml"]

[dependencies]
qndx-core = { workspace = true }
qndx-index = { workspace = true }
qndx-query = { workspace = true }
qndx-git = { workspace = true }
clap = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
toml = { version = "1.0", optional = true }
