[package]
name = "qndx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared types, file format definitions, hashing, and IDs for qndx"

[dependencies]
serde = { workspace = true }
wincode = { workspace = true }
crc32fast = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
