[package]
name = "qndx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/qndx-core"
description = "Shared types, file format definitions, hashing, and IDs for qndx"
readme = "../../README.md"

[dependencies]
serde = { workspace = true }
wincode = { workspace = true }
rapidhash = { workspace = true }
ignore = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
