[package]
name = "qndx-git"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Git integration (gix-first) for qndx freshness model"

[dependencies]
qndx-core = { workspace = true }
gix = { workspace = true }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3"
