[package]
name = "qndx-index"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Index builder, storage writer/reader for qndx"

[dependencies]
qndx-core = { workspace = true }
roaring = { workspace = true }
postcard = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
