[package]
name = "qndx-query"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Regex decomposition, candidate planner, and verifier for qndx"

[dependencies]
qndx-core = { workspace = true }
qndx-index = { workspace = true }
regex = { workspace = true }
regex-syntax = { workspace = true }

[dev-dependencies]
qndx-git = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
