[package]
name = "qndx-query"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/qndx-query"
description = "Regex decomposition, candidate planner, and verifier for qndx"
readme = "../../README.md"

[dependencies]
qndx-core = { workspace = true }
qndx-index = { workspace = true }
regex = { workspace = true }
regex-syntax = { workspace = true }

[dev-dependencies]
qndx-git = { workspace = true }
tempfile = { workspace = true }
proptest = { workspace = true }
